--- a/Terms and Policy/terms.html
+++ b/Terms and Policy/terms.html
@@ -7,22 +7,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<div class="container">
+ <div class="container">
   <div class="welcome">
-    <h1>TERMS OF USE OF APP AND SERVICES
-  </h1>
+    <h1>Terms of Use of App 
+& Services</h1>
   </div>
-  <div class="lineleft"></div>
- <div class="lineright"></div>  
-<div class="data">
-   <h2> Date of last revision: <br>
-October 18, 2019</h2>
+ 
+  <div class="data">
+   <div class="lineLeft"></div> 
+   <div class="lineRight"></div>  
+   <h2> Date of last revision:<br>October 18, 2019</h2>
   </div>
    
   <div class="text">
-    <p>By using Cashlet (the “Mobile App”) and signing up for the services offered by Sycamore Capital Limited ("Sycamore"), You acknowledge and confirm that:
-
-</p>
+    <p>By using Cashlet (the “Mobile App”) and signing up for the services offered by Sycamore Capital Limited ("Sycamore"), You acknowledge and confirm that:</p>
     <h3>TERMS OF USE OF APP AND SERVICES</h3>
     <p>1. You are 18 years of age or older and where you are acting as Guardian on behalf of a minor, you have the necessary authority to register/sign up for the services on behalf of the minor.<br><br>2. You have understood and agreed to abide by the terms of the Investment Services Agreement below.<br><br>3. You have read and understood the Privacy Policy published on the Mobile App.<br><br>4. The information you provide when you register on the Mobile App is true and correct5. Cashlet may contact you by phone and/or E-mail in connection with your registration.<br><br>6. The entire contents of the Mobile App, including its "look and feel" are property of Sycamore and are protected under Intellectual Property laws. You may not copy or distribute any part of the Mobile App without approval.<br><br>Cashlet® is a trademark owned by Sycamore Capital Limited.</p>
     <h3>INVESTMENT SERVICES AGREEMENT</h3>
@@ -33,17 +31,17 @@ October 18, 2019</h2>
     <h3>3. UNDER THIS AGREEMENT, MY OBLIGATIONS ARE TO:</h3>
     <p>Ensure that the money I invest is from my registered mobile money or bank account number provided to Cashlet.<br><br>Ensure that the money I invest is from my bank account (primary holder's bank account in case of Investment Account held jointly), is from legitimate sources and is remitted through approved banking channels.<br><br>Keep my Login Credentials safe and secret. Promptly change my Login Credentials and inform Cashlet of any actual or suspected unauthorized use of my Login Credentials.<br><br>Make an informed investment decision by reading the Offer Documents* of the mutual fund schemes that I am investing in.</p>
     <h3>4. I FURTHER ACKNOWLEDGE AND AGREE TO THE FOLLOWING:</h3>
-    <p>My Investment Account will be activated after Cashlet verifies my personal information in accordance with the Know Your Client ("KYC") guidelines issued by the appropriate regulatory agencies.<br><br>Cashlet does not, and is not obliged to, offer all mutual fund schemes for investment. By limiting the number of schemes on the Mobile App, Cashlet does not make any representation as to the quality, bona fides or nature of any AMC or mutual fund scheme, or any other representation, warranty or guaranty, express or implied.<br><br>Cashlet will forward my Instructions to the AMC electronically and the AMC will process the transactions on the basis of such electronic instructions. AMCs are not obliged to accept my application for subscription to units of their mutual fund schemes in part or in full.<br><br>For Investment Accounts held jointly, the mutual fund folios maintained by the concerned AMC will also be held jointly and all the individuals will have the same authority to operate those folios (Any or Survivor).<br><br>In case I violate this agreement, or any local or international laws, Cashlet may, at any time and at its sole discretion, terminate my Investment Account and/or prevent me from accessing the Mobile App and/or Services at any time and at its sole discretion.<br><br>Cashlet may modify these terms at any time by informing me. My continued use of the Services will imply my acceptance of the changes..</p>
-     <h3>5. I WILL NOT DISPUTE AND/OR HOLD CASHLET RESPONSIBLE FOR:</h3>
+    <p>My Investment Account will be activated after Cashlet verifies my personal information in accordance with the Know Your Client ("KYC") guidelines issued by the appropriate regulatory agencies.<br><br>Cashlet does not, and is not obliged to, offer all mutual fund schemes for investment. By limiting the number of schemes on the Mobile App, Cashlet does not make any representation as to the quality, bona fides or nature of any AMC or mutual fund scheme, or any other representation, warranty or guaranty, express or implied.<br><br>Cashlet will forward my Instructions to the AMC electronically and the AMC will process the transactions on the basis of such electronic instructions. AMCs are not obliged to accept my application for subscription to units of their mutual fund schemes in part or in full.<br><br>For Investment Accounts held jointly, the mutual fund folios maintained by the concerned AMC will also be held jointly and all the individuals will have the same authority to operate those folios (Any or S    urvivor).<br><br>In case I violate this agreement, or any local or international laws, Cashlet may, at any time and at its sole discretion, terminate my Investment Account and/or prevent me from accessing the Mobile App and/or Services at any time and at its sole discretion.<br><br>Cashlet may modify these terms at any time by informing me. My continued use of the Services will imply my acceptance of the changes..</p>
+    <h3>5. I WILL NOT DISPUTE AND/OR HOLD CASHLET RESPONSIBLE FOR:</h3>
     <p>Any act that is not an obligation of Cashlet in this Agreement.<br><br>Any disclosures made by Cashlet to any statutory body under any law.<br><br>Any loss, notional or otherwise, incurred because of any wrong information provided by me at the timeof sign up, account activation or later<br><br>Delays either at the Bank, Registrar and Transfer Agency or AMC<br><br>Rejection of my instructions by the Bank, Registrar and Transfer Agency or AMC.<br><br>Processing of Instructions authenticated by my Login Credentials<br><br>Non-availability or non-accessibility of the Mobile App, telephone(s), or office(s) of Cashlet in case of circumstances beyond Cashlet’s control.</p>
     <h3>6. GOVERNING LAWS</h3>
     <p>The laws of Kenya govern this Agreement. All disputes are subject, firstly, to mediation, and then by Arbitration by a sole arbitrator appointed by Cashlet. The venue of arbitration will be Nairobi, Kenya.</p>
-      <h3>7. INVESTMENT CAUTION</h3>
+    <h3>7. INVESTMENT CAUTION</h3>
     <p>Mutual Fund and Unit Trusts investments are subject to market risks, read all scheme-related documents carefully.</p>
-      <h3>8. PAYMENT</h3>
+    <h3>8. PAYMENT</h3>
     <p>Cashlet uses third party payment gateway for facilitating transfer of money from customer’s bank accounts. Transactions once completed cannot be cancelled<br><br>In case of successful transfer of money but failure of investment transaction, money would be refunded within 72 hours to the registered bank account<br><br><br><br>*Offer documents: Collective term of Offer Document, Scheme Information Document, Statement of Additional Information, Key Information Memorandum, issued by the Asset Management Company that manages the mutual fund</p>
   </div>
-  </div>
+ </div>
 
 </body>
 </html>
